[gd_scene load_steps=4 format=3 uid="uid://c1u0fqioao04s"]

[ext_resource type="Script" uid="uid://biolrg87f8i6b" path="res://Entities/UI/Draw Selection/draw_selection.gd" id="1_144sx"]
[ext_resource type="Theme" uid="uid://cpqn62674apy" path="res://Assets/Themes/button.tres" id="1_uwus8"]
[ext_resource type="ButtonGroup" uid="uid://by2o6rhvh3iuo" path="res://Entities/UI/Draw Selection/draw_selection.tres" id="2_g3cgw"]

[node name="DrawSelection" type="VBoxContainer"]
custom_minimum_size = Vector2(248, 0)
offset_right = 335.0
offset_bottom = 89.0
script = ExtResource("1_144sx")

[node name="DrawLabel" type="Label" parent="."]
layout_mode = 2
text = "Draw options"
horizontal_alignment = 1

[node name="Text" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("1_uwus8")
toggle_mode = true
button_group = ExtResource("2_g3cgw")
text = "Text"

[node name="TextContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="x1" type="LineEdit" parent="TextContainer"]
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "x1"
alignment = 1

[node name="x2" type="LineEdit" parent="TextContainer"]
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "x2"
alignment = 1

[node name="y1" type="LineEdit" parent="TextContainer"]
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "y1"
alignment = 1

[node name="y2" type="LineEdit" parent="TextContainer"]
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "y2"
alignment = 1

[node name="radius" type="LineEdit" parent="TextContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
placeholder_text = "radius"
alignment = 1

[node name="Create" type="Button" parent="TextContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme = ExtResource("1_uwus8")
text = "Create"

[node name="Interactive" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("1_uwus8")
toggle_mode = true
button_group = ExtResource("2_g3cgw")
text = "Interactive"

[node name="Points" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("1_uwus8")
toggle_mode = true
button_group = ExtResource("2_g3cgw")
text = "Points"

[connection signal="toggled" from="Text" to="." method="_on_text_toggled"]
[connection signal="pressed" from="Interactive" to="." method="_on_interactive_pressed"]
[connection signal="pressed" from="Points" to="." method="_on_points_pressed"]
